--- a/event.html
+++ b/event.html
@@ -14,8 +14,8 @@
       <h1>Judo Club Linéen</h1>
       <nav>
         <ul>
-          <li id="landing_page">Présentation</li>
-          <li id="event_page">Evenements</li>
+          <li id="landing_page" href="index.html">Présentation</li>
+          <li id="event_page href="event.html">Evenements</li>
         </ul>
       </nav>
     </header>
