--- a/event.html
+++ b/event.html
@@ -7,19 +7,26 @@
     <title>Evenement Judo Club</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
+
+
   <body>
     <script src="script.js"></script>
     <header>
-      <img src="" alt="club_logo">
+      <img src="img/logo.png" alt="club_logo">
       <h1>Judo Club Linéen</h1>
       <nav>
         <ul>
           <li id="landing_page" href="index.html">Présentation</li>
-          <li id="event_page href="event.html">Evenements</li>
+          <li id="event_page" href="event.html">Evenements</li>
         </ul>
       </nav>
     </header>
+
+
     <main></main>
+
+
     <footer></footer>
+    
   </body>
 </html>
