--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
     <footer>
       <p>Site réalisé par Dev0ron<br/>Me contacter sur les réseaux sociaux</p>
-      <ul><li></li>
-      <li></li>
-      <li></li></ul>
+      <ul><li><img src="" alt="fb_Icon"></li>
+      <li><img src="" alt="linkedIn_Icon"></li>
+      <li><img src="" alt="Indeed_Icon"></li></ul>
     </footer>
 
   </body>
