--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <aside class="article"><h3>Les différentes disciplines pratiquées</h3><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem molestiae quaerat culpa animi quibusdam repellat cupiditate mollitia laudantium dicta? Facilis reprehenderit non, ipsum expedita enim quasi esse adipisci cupiditate in?</p></aside>
         <aside class="article"><h3>Horaires</h3><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem molestiae quaerat culpa animi quibusdam repellat cupiditate mollitia laudantium dicta? Facilis reprehenderit non, ipsum expedita enim quasi esse adipisci cupiditate in?</p></aside>
         <aside class="article"><h3>Comment adhérer</h3><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta eligendi corporis ut tenetur, eveniet adipisci natus saepe amet! Obcaecati nihil pariatur voluptates voluptatem rerum, aliquam eveniet ratione officiis laborum dolor, debitis accusantium. Ratione iusto nesciunt suscipit hic rerum quo, minus obcaecati, illo itaque doloremque quam laudantium nihil animi odit autem velit unde nam ab odio consequuntur explicabo ducimus, dicta blanditiis. Aliquid repellendus, blanditiis autem sunt fuga nihil ut fugit deserunt libero ab nesciunt nostrum commodi quam sint, dolores odit harum. Velit perferendis nulla fugit molestias nobis quasi tempora dicta aliquam ad molestiae dolores voluptates ducimus vitae, nihil maxime? Et, adipisci quas. Accusantium veritatis nemo, tempora molestiae reprehenderit veniam sit ea excepturi, suscipit maiores aspernatur debitis nobis facilis? Earum suscipit incidunt iure quasi ea officia animi nulla vero dolor tempora architecto non, provident quos nam voluptas itaque quas accusantium magni, temporibus esse eos. Eos inventore quam vero hic odio repellendus, voluptatem est illum repudiandae recusandae ab nisi soluta blanditiis laboriosam ducimus?</p></aside>
-        <aside class="article"><h3>Tarifs</h3>p^lorem30</aside>
+        <aside class="article"><h3>Tarifs</h3><p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat cum minus minima optio ipsa quia vero autem nesciunt eaque beatae modi quidem rerum dolor et excepturi, quaerat aspernatur! Consectetur, fuga?</p></aside>
         <aside class="ads"><h3>Nos partenaires</h3></aside>
       </div>
     </main>
@@ -48,6 +49,9 @@
       <ul><li><img src="" alt="fb_Icon"></li>
       <li><img src="" alt="linkedIn_Icon"></li>
       <li><img src="" alt="Indeed_Icon"></li></ul>
+      <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+<div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+
     </footer>
 
   </body>
