--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
 
 
   <body>
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script>-->
     <header>
       <img src="img/logo.png" alt="club_logo">
       <h1>Judo Club Linéen</h1>
+    </header>
+
+    <div class="clear"></div>
+
+    <div class="side_bare">
       <nav>
         <ul>
           <li><a href="index.html">Présentation</a></li>
           <li><a href="event.html">Evenements</a></li>
-          <li><a href="form_contact">Nous contacter</a></li>
+          <li><a href="form_contact">Contacts</a></li>
         </ul>
-      </nav>
-    </header>
+      </nav></div>
 
-    <div class="clear"></div>
+      <div class="clear"></div>
 
     <main>
       <h2>Bienvenue sur le site de notre club.</h2>
@@ -50,10 +54,12 @@
         <aside class="article"><h3>Tarifs</h3>
           <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat cum minus minima optio ipsa quia vero autem nesciunt eaque beatae modi quidem rerum dolor et excepturi, quaerat aspernatur! Consectetur, fuga?</p>
-      </aside>
-        <aside class="ads"><h3>Nos partenaires</h3></aside>
-      </div>
     </main>
+
+    <div class="clear"></div>
+
+    <div class="side_bare"><h3>Nos partenaires</h3></aside>
+    </div></div>
 
     <div class="clear"></div>
 
@@ -63,7 +69,7 @@
       <li><img src="icones/linkedin.png" alt="linkedIn_Icon">LinkedIn</li>
       <li><img src="icones/github.png" alt="Github_Icon"></li>Github</ul>
       <li><img src="icones/twitter.png" alt="Twitter_Icon"></li>Twitter</ul>
-      <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+      <div id="thx">Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 
     </footer>
 
