--- a/index.html
+++ b/index.html
@@ -14,22 +14,19 @@
     <header>
       <img src="img/logo.png" alt="club_logo">
       <h1>Judo Club Linéen</h1>
-    </header>
-
-    <div class="clear"></div>
-
-    <div class="side_bare">
       <nav>
         <ul>
           <li><a href="index.html">Présentation</a></li>
           <li><a href="event.html">Evenements</a></li>
           <li><a href="form_contact">Contacts</a></li>
         </ul>
-      </nav></div>
+      </nav>
+    </header>
 
-      <div class="clear"></div>
+    <div class="clear"></div>
 
     <main>
+
       <h2>Bienvenue sur le site de notre club.</h2>
       <p>Le judo (littéralement voie de la souplesse) est un art martial d'origine japonaise, fondé par Jigoro Kano vers 1880</p>
       <div class="container">
@@ -54,21 +51,23 @@
         <aside class="article"><h3>Tarifs</h3>
           <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat cum minus minima optio ipsa quia vero autem nesciunt eaque beatae modi quidem rerum dolor et excepturi, quaerat aspernatur! Consectetur, fuga?</p>
-    </main>
+
+    <div class="clear"></div>
+</div>
 
     <div class="clear"></div>
 
     <div class="side_bare"><h3>Nos partenaires</h3></aside>
-    </div></div>
+    </div>
 
-    <div class="clear"></div>
+  </main>
 
     <footer>
-      <p>Site réalisé par Dev0ron. Me contacter sur les réseaux sociaux.</p>
       <ul><li><img src="icones/facebook.png" alt="fb_Icon">Facebook</li>
       <li><img src="icones/linkedin.png" alt="linkedIn_Icon">LinkedIn</li>
-      <li><img src="icones/github.png" alt="Github_Icon"></li>Github</ul>
-      <li><img src="icones/twitter.png" alt="Twitter_Icon"></li>Twitter</ul>
+      <li><img src="icones/github.png" alt="Github_Icon">Github</li>
+      <li><img src="icones/twitter.png" alt="Twitter_Icon">Twitter</li></ul>
+      <p>Site réalisé par Dev0ron. N'hésitez à me contacter sur les réseaux sociaux.</p>
       <div id="thx">Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 
     </footer>
