refonte CSS navBar bottom fixed

--- a/index.html
+++ b/index.html
@@ -13,64 +13,90 @@
     <!--<script src="script.js"></script>-->
     <header>
       <img src="img/logo.png" alt="club_logo">
-      <h1>Judo Club Linéen</h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Présentation</a></li>
-          <li><a href="event.html">Evenements</a></li>
-          <li><a href="form_contact">Contacts</a></li>
-        </ul>
-      </nav>
+      <span><h1>Judo Club Linéen</h1></span>
     </header>
 
     <div class="clear"></div>
 
     <main>
 
-      <h2>Bienvenue sur le site de notre club.</h2>
+      <span><h2>Bienvenue sur le site de notre club.</h2></span>
       <p>Le judo (littéralement voie de la souplesse) est un art martial d'origine japonaise, fondé par Jigoro Kano vers 1880</p>
       <div class="container">
-        <aside class="article"><h3>Présentation du club</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi velit eum voluptatibus ipsa totam obcaecati. Nam similique fugit, necessitatibus totam neque rem iusto minima consequatur quam, illo blanditiis quibusdam consequuntur numquam sed ducimus vitae voluptatibus quae inventore? Molestiae, tempore quos.</p>
+        <aside class="article"><span><h3>Présentation du club</h3></span>
+          <p>Sport d’équilibre, sport éducatif, sport de défense, le Judo est adapté à toutes les tranches d’âge.
+            Véritable sport éducatif, le Judo permet à chacun de devenir plus adroit, plus souple, plus fort mais aussi d’apprendre à respecter des règles, découvrir l’entraide, évaluer ses forces et ses faiblesses pour progresser.
+            
+            Le Judo est un sport pour tous qui procure un véritable équilibre. Activité de détente et de plaisir, le Judo est une discipline basée sur l’échange et la progression. L’apprentissage se fait de manière progressive en fonction des aptitudes de l’individu, ce qui permet à chacun d’évoluer à son rythme.
+            Pour les enfants 4-5 ans, la Fédération a mis en place l’éveil Judo. Pédagogie adaptée qui permet le développement physique et intellectuel des très jeunes pratiquants. Le programme éveil-judo est délibérément construit, autour de l’intérêt de l’enfant, pour faciliter ses futurs apprentissages du judo et des activités sportives et artistiques en général.</p>
         </aside>
-        <aside class="article"><h3>Code moral du Judo</h3>
+        <aside class="article"><span><h3>Code moral du Judo</h3></span>
+          <img src="img/code_moral_Judo.jpg" alt="code_moral">
+          <p>Le judo véhicule des valeurs fondamentales qui s'imbriquent les unes dans les autres pour édifier une formation morale. Le respect de ce code est la condition première, la base de la pratique du judo.</p>
+        </aside>
+        <aside class="article"><span><h3>Présentation de l'équipe</h3></span>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem molestiae quaerat culpa animi quibusdam repellat cupiditate mollitia laudantium dicta? Facilis reprehenderit non, ipsum expedita enim quasi esse adipisci cupiditate in?</p>
         </aside>
-        <aside class="article"><h3>Présentation de l'équipe</h3>
+        <aside class="article"><span><h3>Les différentes disciplines pratiquées</h3></span>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem molestiae quaerat culpa animi quibusdam repellat cupiditate mollitia laudantium dicta? Facilis reprehenderit non, ipsum expedita enim quasi esse adipisci cupiditate in?</p>
         </aside>
-        <aside class="article"><h3>Les différentes disciplines pratiquées</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem molestiae quaerat culpa animi quibusdam repellat cupiditate mollitia laudantium dicta? Facilis reprehenderit non, ipsum expedita enim quasi esse adipisci cupiditate in?</p>
+        <aside class="article"><span><h3>Horaires et accès</h3></span>
+          <p>Retrouvez nous au gymnase Léo Lagrange (à côté du Collège Robert Aubry)<br />
+            <ul>
+                <li>3 ans : Samedi de 09h30 à 10h15</li><br /> 
+                <li>4/5 ans: Samedi de 10h15 à 11h00</li><br />
+                <li>6 / 10 ans : Mercredi de 18h à 19h00
+                Samedi de 11h00 à 12h00 </li><br />
+                <li>10 ans et + Adultes: Mercredi de 19h15 à 20h30
+                Samedi de 13h30 à 15h00</li><br />
+                </ul>
+            </p>
         </aside>
-        <aside class="article"><h3>Horaires</h3>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem molestiae quaerat culpa animi quibusdam repellat cupiditate mollitia laudantium dicta? Facilis reprehenderit non, ipsum expedita enim quasi esse adipisci cupiditate in?</p>
-        </aside>
-        <aside class="article"><h3>Comment adhérer</h3>
+        <aside class="article"><span><h3>Comment adhérer</h3></span>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta eligendi corporis ut tenetur, eveniet adipisci natus saepe amet! Obcaecati nihil pariatur voluptates voluptatem rerum, aliquam eveniet ratione officiis laborum dolor, debitis accusantium. Ratione iusto nesciunt suscipit hic rerum quo, minus obcaecati, illo itaque doloremque quam laudantium nihil animi odit autem velit unde nam ab odio consequuntur explicabo ducimus, dicta blanditiis. Aliquid repellendus, blanditiis autem sunt fuga nihil ut fugit deserunt libero ab nesciunt nostrum commodi quam sint, dolores odit harum. Velit perferendis nulla fugit molestias nobis quasi tempora dicta aliquam ad molestiae dolores voluptates ducimus vitae, nihil maxime? Et, adipisci quas. Accusantium veritatis nemo, tempora molestiae reprehenderit veniam sit ea excepturi, suscipit maiores aspernatur debitis nobis facilis? Earum suscipit incidunt iure quasi ea officia animi nulla vero dolor tempora architecto non, provident quos nam voluptas itaque quas accusantium magni, temporibus esse eos. Eos inventore quam vero hic odio repellendus, voluptatem est illum repudiandae recusandae ab nisi soluta blanditiis laboriosam ducimus?</p>
         </aside>
-        <aside class="article"><h3>Tarifs</h3>
+        <aside class="article"><span><h3>Tarifs saison 2020/2021:</h3></span>
           <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat cum minus minima optio ipsa quia vero autem nesciunt eaque beatae modi quidem rerum dolor et excepturi, quaerat aspernatur! Consectetur, fuga?</p>
+            <ul>
+              <li>Frais d'inscription:  15€</li>
+              <li>Licence: 40€</li><br />
+              <li>Baby judo 3 ans: 85€</li><br />
+              <li>Eveil judo 4/5 ans: 85€ </li><br />
+              <li>Judo: 130€</li><br />
+              <li>Taiso: 85€</li><br />
+            </ul> 
+            Et si vous venez en famille on vous fait une remise.  
+          </p>
 
     <div class="clear"></div>
 </div>
 
     <div class="clear"></div>
 
-    <div class="side_bare"><h3>Nos partenaires</h3></aside>
-    </div>
+    <aside class="side_bare"><h3>Nos partenaires</h3></aside>
+    <a href="http://www.alohagrafic.com" title="alohagrafic.com"><img class='partenaires' src="img/alohaGrafic.png"></a> <a href="http://www.immobelis.com" title="immobelis.com"><img class='partenaires' src="img/immobelis.jpeg"></a>
+    </aside>
 
   </main>
 
-    <footer>
-      <ul><li><img src="icones/facebook.png" alt="fb_Icon">Facebook</li>
-      <li><img src="icones/linkedin.png" alt="linkedIn_Icon">LinkedIn</li>
-      <li><img src="icones/github.png" alt="Github_Icon">Github</li>
-      <li><img src="icones/twitter.png" alt="Twitter_Icon">Twitter</li></ul>
-      <p>Site réalisé par Dev0ron. N'hésitez à me contacter sur les réseaux sociaux.</p>
-      <div id="thx">Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-
-    </footer>
+  <footer>
+    <ul><li><img class="social" src="icones/facebook.png" alt="fb_Icon">Facebook</li>
+    <li><img class="social" src="icones/linkedin.png" alt="linkedIn_Icon">LinkedIn</li>
+    <li><img class="social" src="icones/github.png" alt="Github_Icon">Github</li>
+    <li><img class="social" src="icones/twitter.png" alt="Twitter_Icon">Twitter</li></ul>
+    <p>Site réalisé par Dev0ron. N'hésitez à me contacter sur les réseaux sociaux.</p>
+    <div id="thx">Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixelperfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+  </footer>
+  <section class="main_navBar">  
+  <nav>
+      <ul>
+        <li class="nav_bar"><a href="index.html" class="small">Présentation</a></li>
+        <li class="nav_bar"><a href="event.html" class="small">Evénements</a></li>
+        <li class="nav_bar"><a href="news.html" class="small">Actualitées</a></li>
+        <li class="nav_bar"><a href="contact.html" class="small">Contacts</a></li>
+      </ul>
+    </nav>
+  </section>
 
   </body>
 </html>
