init contact sales thumbail

--- a/sales.html
+++ b/sales.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta lang="fr">
     <meta name="viewport" content="width=device-width">
-    <title>Evenement Judo Club</title>
+    <title>Judo Club linéen</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
@@ -22,38 +22,10 @@
 
       <span><h2>Bienvenue sur le site de notre club.</h2></span>
       <p>Le judo (littéralement voie de la souplesse) est un art martial d'origine japonaise, fondé par Jigoro Kano vers 1880</p>
-      <div class="container">
-        <aside class="article"><span><h3>Commandes de chocolats arrivées</h3></span>
-          <p>Les commandes de chocolats sont arrivées.
-            On prépare cela dans le week-end et on vous proposera une distribution dès la semaine prochaine 😉</p>
-        </aside>
-        <aside class="article"><span><h3>Reprise activités du club</h3></span>
-          <p>Petit point sur la situation...</p>
-          <img  class="thumbnail" src="img/reprise_activite_club.jpg" alt="reprise_activite_club">
-        </aside>
-        <aside class="article"><span><h3>Mise à jour covid</h3></span>
-          <p>Chers licenciés,
-            A ce jour tjs pas d infos pour la reprise, on dépends de la fédération mais aussi de la communauté d'agglomération. 
-            Au dernière nouvelle une possibilité de reprise pour les sports de contacts au 20 janvier selon la situation sanitaire .
-            On croise les doigts .
-            Dès que nous aurons plus d'informations on vous avertis.</p>
-        </aside>
-        <aside class="article"><span><h3>Le nouveau tatami arrive!!!</h3></span>
-          <p> les nouveaux tapis ont été commandés arrivés courant le mois de décembre. 
-            Prenez soin de vous et à très bientôt  courage à tous et malgré tout bonne fêtes à tous.</p>
-        </aside>
-        <aside class="article"><span><h3>Horaires et accès</h3></span>
-          <p></p>
-        </aside>
-        <aside class="article"><span><h3>Comment adhérer</h3></span>
-          <p></p>
-        </aside>
-        <aside class="article"><span><h3>Tarifs saison 2020/2021:</h3></span>
-          <p> 
-          </p>
-
+      <div class="container"></div>
     <div class="clear"></div>
-</div>
+
+    <section id="promotion">Désolé pas de promo en ce moment</section>
 
     <div class="clear"></div>
 
@@ -63,7 +35,6 @@
 
   </main>
 
-
   <footer>
     <ul><li><img class="social" src="icones/facebook.png" alt="fb_Icon">Facebook</li>
     <li><img class="social" src="icones/linkedin.png" alt="linkedIn_Icon">LinkedIn</li>
@@ -72,12 +43,13 @@
     <p>Site réalisé par Dev0ron. N'hésitez à me contacter sur les réseaux sociaux.</p>
     <div id="thx">Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixelperfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
   </footer>
+
   <section class="main_navBar">  
   <nav>
       <ul>
         <li class="nav_bar"><a href="index.html" class="small">Accueil</a></li>
-        <li class="nav_bar active"><a href="event.html" class="small">Evénements</a></li>
-        <li class="nav_bar"><a href="sales.html" class="small">Promos</a></li>
+        <li class="nav_bar"><a href="event.html" class="small">Evénements</a></li>
+        <li class="nav_bar active"><a href="sales.html" class="small">Promos</a></li>
         <li class="nav_bar"><a href="contact.html" class="small">Contacts</a></li>
       </ul>
     </nav>
