--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 			<input type="text" name="name" id="name" class="form-control" placeholder="votre nom" required><br />		
 			<label id="email-label" for="email">Email:</label>
 			<input type="email" name="email" id="email" class="form-control" placeholder="votre email" required="email"><br />
-			<label id="number-label" for="number">TéléPhone:</label>
+			<label id="number-label" for="number">Téléphone:</label>
 			<input type="number" min="0000000000" max="9999999999"name="number" id="number" class="form-control" placeholder="votre numéro" required><br />
 			<label id="Age-label" for="number">Age<span>(optionnel)</span>:</label>
 			<input type="number" min="16" max="120"name="number" id="Age" class="form-control" placeholder="votre age">				
@@ -62,7 +62,7 @@
 			<input type="checkbox" name="SMS" id="SMS" class="input-checkbox" value="SMS">		
 			<label id="email-label" for="email">Email:</label>
 			<input type="checkbox" name="email" id="email" class="input-checkbox" value="Email">
-			<label id="number-label" for="number">TéléPhone:</label>
+			<label id="number-label" for="number">Téléphone:</label>
 			<input type="checkbox" name="number" id="number" class="input-checkbox" value="TéléPhone">			
 		</div>
 
